--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -5489,7 +5489,7 @@ level set corresponding to $\phi = 0$.
 
 *** Val's Elliptical Equations
 
-#+name: vw-elliptical-solver
+#+name: calc-fireline-normal-behavior
 #+begin_src python
 from math import sqrt
 import numpy as np
@@ -5541,7 +5541,7 @@ def calc_fireline_normal_behavior(fire_behavior_max, phi_gradient):
     - phi_gradient       :: (dphi_dx: phi/m, dphi_dy: phi/m, dphi_dz: phi/m) 3D vector on the slope-tangential plane
 
     return a dictionary containing these keys:
-    - dphi_dt            :: phi/min
+    - dphi_dt            :: phi/min (on the slope-tangential plane)
     - fire_type          :: "unburned", "surface", "passive_crown", or "active_crown"
     - spread_rate        :: m/min
     - spread_direction   :: (x, y, z) unit vector
@@ -5598,12 +5598,252 @@ def calc_fireline_normal_behavior(fire_behavior_max, phi_gradient):
             "fireline_intensity": normal_fireline_intensity, # kW/m
             "flame_length"      : normal_flame_length,       # m
         }
+#+end_src
 
+*** Burn Cell Normal to the Fire Perimeter
 
+# TODO: Update this text.
+
+When the goal of a fire behavior analysis is to evolve a burn scar
+from its point of ignition into a generally conical shape in
+space-time, then it is necessary to evaluate the combined surface and
+crown fire behavior in the direction normal to the fire front. In
+order to facilitate this calculation, the following function takes an
+azimuth (degrees clockwise from North), meant to represent the spatial
+direction in which the fire front is spreading from a given grid cell.
+It first projects this 2D direction onto the local slope-tangential
+plane and computes the surface fire behavior in this direction. If a
+crown fire occurs, the crown fire behavior is also calculated in the
+azimuth direction, and the combined surface and crown fire behavior
+(as per section [[Combining Surface and Crown Fire Behavior]]) is
+returned. If no crown fire occurs, the surface fire behavior in the
+azimuth direction is returned.
+
+#+name: burn-cell-toward-phi-gradient
+#+begin_src python
+import pyretechnics.conversion as conv
+import pyretechnics.crown_fire as cf
+import pyretechnics.eulerian_level_set as els
+import pyretechnics.fuel_models as fm
+import pyretechnics.surface_fire as sf
+import pyretechnics.vector_utils as vu
+
+# TODO: Create a version of this function that runs efficiently over a space_time_region
+def burn_cell_toward_phi_gradient(space_time_cubes, space_time_coordinate, phi_gradient,
+                                  use_wind_limit=True, max_length_to_width_ratio=None):
+    """
+    Given these inputs:
+    - space_time_cubes          :: dictionary of (Lazy)SpaceTimeCube objects with these cell types
+      - slope                         :: rise/run
+      - aspect                        :: degrees clockwise from North
+      - fuel_model                    :: integer index in fm.fuel_model_table
+      - canopy_cover                  :: 0-1
+      - canopy_height                 :: m
+      - canopy_base_height            :: m
+      - canopy_bulk_density           :: kg/m^3
+      - wind_speed_10m                :: km/hr
+      - upwind_direction              :: degrees clockwise from North
+      - fuel_moisture_dead_1hr        :: kg moisture/kg ovendry weight
+      - fuel_moisture_dead_10hr       :: kg moisture/kg ovendry weight
+      - fuel_moisture_dead_100hr      :: kg moisture/kg ovendry weight
+      - fuel_moisture_live_herbaceous :: kg moisture/kg ovendry weight
+      - fuel_moisture_live_woody      :: kg moisture/kg ovendry weight
+      - foliar_moisture               :: kg moisture/kg ovendry weight
+      - fuel_spread_adjustment        :: float >= 0.0 (Optional: defaults to 1.0)
+      - weather_spread_adjustment     :: float >= 0.0 (Optional: defaults to 1.0)
+    - space_time_coordinate     :: (t,y,x)
+    - phi_gradient              :: (dphi_dx, dphi_dy, dphi_dz) 3D phi/m vector on the slope-tangential plane
+    - use_wind_limit            :: boolean (Optional)
+    - max_length_to_width_ratio :: float > 0.0 (Optional)
+
+    return a dictionary with these fire behavior values for the space-time coordinate (t,y,x):
+    - dphi_dt            :: phi/min (on the slope-tangential plane)
+    - fire_type          :: "unburned", "surface", "passive_crown", or "active_crown"
+    - spread_rate        :: m/min
+    - spread_direction   :: (x, y, z) unit vector on the slope-tangential plane
+    - fireline_intensity :: kW/m
+    - flame_length       :: m
+    """
+    #================================================================================================
+    # Destructure the space_time_coordinate
+    #================================================================================================
+
+    (t, y, x) = space_time_coordinate
+
+    #================================================================================================
+    # Unpack the space_time_cubes dictionary
+    #================================================================================================
+
+    # Topography, Fuel Model, and Vegetation
+    slope               = space_time_cubes["slope"].get(t,y,x)               # rise/run
+    aspect              = space_time_cubes["aspect"].get(t,y,x)              # degrees clockwise from North
+    fuel_model_number   = space_time_cubes["fuel_model"].get(t,y,x)          # integer index in fm.fuel_model_table
+    canopy_cover        = space_time_cubes["canopy_cover"].get(t,y,x)        # 0-1
+    canopy_height       = space_time_cubes["canopy_height"].get(t,y,x)       # m
+    canopy_base_height  = space_time_cubes["canopy_base_height"].get(t,y,x)  # m
+    canopy_bulk_density = space_time_cubes["canopy_bulk_density"].get(t,y,x) # kg/m^3
+
+    # Wind, Surface Moisture, and Foliar Moisture
+    wind_speed_10m                = space_time_cubes["wind_speed_10m"].get(t,y,x)                # km/hr
+    upwind_direction              = space_time_cubes["upwind_direction"].get(t,y,x)              # degrees clockwise from North
+    fuel_moisture_dead_1hr        = space_time_cubes["fuel_moisture_dead_1hr"].get(t,y,x)        # kg moisture/kg ovendry weight
+    fuel_moisture_dead_10hr       = space_time_cubes["fuel_moisture_dead_10hr"].get(t,y,x)       # kg moisture/kg ovendry weight
+    fuel_moisture_dead_100hr      = space_time_cubes["fuel_moisture_dead_100hr"].get(t,y,x)      # kg moisture/kg ovendry weight
+    fuel_moisture_live_herbaceous = space_time_cubes["fuel_moisture_live_herbaceous"].get(t,y,x) # kg moisture/kg ovendry weight
+    fuel_moisture_live_woody      = space_time_cubes["fuel_moisture_live_woody"].get(t,y,x)      # kg moisture/kg ovendry weight
+    foliar_moisture               = space_time_cubes["foliar_moisture"].get(t,y,x)               # kg moisture/kg ovendry weight
+
+    # Spread Rate Adjustments (Optional)
+    fuel_spread_adjustment    = (space_time_cubes["fuel_spread_adjustment"].get(t,y,x)
+                                 if "fuel_spread_adjustment" in space_time_cubes
+                                 else 1.0)                                         # float >= 0.0
+    weather_spread_adjustment = (space_time_cubes["weather_spread_adjustment"].get(t,y,x)
+                                 if "weather_spread_adjustment" in space_time_cubes
+                                 else 1.0)                                         # float >= 0.0
+    spread_rate_adjustment    = fuel_spread_adjustment * weather_spread_adjustment # float >= 0.0
+
+    #================================================================================================
+    # Calculate the magnitude of the phi gradient
+    #================================================================================================
+
+    phi_magnitude = vu.vector_magnitude(phi_gradient) # phi/m
+
+    #================================================================================================
+    # Check whether cell is on the fire perimeter and burnable
+    #================================================================================================
+
+    fuel_model = fm.fuel_model_table.get(fuel_model_number)
+
+    if not (phi_magnitude > 0.0 and fuel_model and fuel_model["burnable"]):
+        # Cell is not on the fire perimeter or contains an unknown or non-burnable fuel model
+
+        #============================================================================================
+        # Return zero surface fire behavior
+        #============================================================================================
+
+        return {
+            "dphi_dt"           : 0.0,
+            "fire_type"         : "unburned",
+            "spread_rate"       : 0.0,
+            "spread_direction"  : None,
+            "fireline_intensity": 0.0,
+            "flame_length"      : 0.0,
+        }
+
+    else:
+        # Cell is on the fire perimeter and contains a burnable fuel model
+
+        #============================================================================================
+        # Compute derived parameters
+        #============================================================================================
+
+        fuel_moisture                = [fuel_moisture_dead_1hr,
+                                        fuel_moisture_dead_10hr,
+                                        fuel_moisture_dead_100hr,
+                                        0.0, # fuel_moisture_dead_herbaceous
+                                        fuel_moisture_live_herbaceous,
+                                        fuel_moisture_live_woody]               # kg moisture/kg ovendry weight
+        fuel_bed_depth               = fuel_model["delta"]                      # ft
+        heat_of_combustion           = conv.Btu_lb_to_kJ_kg(fuel_model["h"][0]) # kJ/kg
+        estimated_fine_fuel_moisture = fuel_moisture_dead_1hr                   # kg moisture/kg ovendry weight
+
+        #============================================================================================
+        # Calculate midflame wind speed
+        #============================================================================================
+
+        # Convert from 10m wind speed to 20ft wind speed
+        wind_speed_20ft = conv.wind_speed_10m_to_wind_speed_20ft(wind_speed_10m) # km/hr
+
+        # Convert 20ft wind speed from km/hr to m/min
+        wind_speed_20ft_m_min = conv.km_hr_to_m_min(wind_speed_20ft) # m/min
+
+        # Convert from 20ft wind speed to midflame wind speed in m/min
+        midflame_wind_speed = sf.calc_midflame_wind_speed(wind_speed_20ft_m_min,       # m/min
+                                                          fuel_bed_depth,              # ft
+                                                          conv.m_to_ft(canopy_height), # ft
+                                                          canopy_cover)                # 0-1
+
+        #============================================================================================
+        # Calculate surface fire behavior in the direction of maximum spread
+        #============================================================================================
+
+        # Apply fuel moisture to fuel model
+        moisturized_fuel_model = fm.moisturize(fuel_model, fuel_moisture)
+
+        # TODO: Memoize calc_surface_fire_behavior_no_wind_no_slope
+        # Calculate no-wind-no-slope surface fire behavior
+        surface_fire_min = sf.calc_surface_fire_behavior_no_wind_no_slope(moisturized_fuel_model,
+                                                                          spread_rate_adjustment)
+
+        # Calculate surface fire behavior in the direction of maximum spread
+        surface_fire_max = sf.calc_surface_fire_behavior_max(surface_fire_min,
+                                                             midflame_wind_speed,
+                                                             upwind_direction,
+                                                             slope,
+                                                             aspect,
+                                                             use_wind_limit)
+
+        #============================================================================================
+        # Calculate surface fire behavior normal to the fire perimeter
+        #============================================================================================
+
+        surface_fire_normal = els.calc_fireline_normal_behavior(surface_fire_max, phi_gradient)
+
+        #============================================================================================
+        # Determine whether the surface fire transitions to a crown fire
+        #============================================================================================
+
+        if cf.van_wagner_crown_fire_initiation(surface_fire_normal["fireline_intensity"],
+                                               canopy_cover,
+                                               canopy_base_height,
+                                               foliar_moisture):
+
+            #========================================================================================
+            # Calculate crown fire behavior in the direction of maximum spread
+            #========================================================================================
+
+            crown_fire_max = cf.calc_crown_fire_behavior_max(canopy_height, canopy_base_height,
+                                                             canopy_bulk_density, heat_of_combustion,
+                                                             estimated_fine_fuel_moisture,
+                                                             wind_speed_10m, upwind_direction,
+                                                             slope, aspect, max_length_to_width_ratio)
+
+            #========================================================================================
+            # Calculate crown fire behavior normal to the fire perimeter
+            #========================================================================================
+
+            crown_fire_normal = els.calc_fireline_normal_behavior(crown_fire_max, phi_gradient)
+
+            #========================================================================================
+            # Calculate combined fire behavior normal to the fire perimeter
+            #========================================================================================
+
+            combined_fire_normal = cf.calc_combined_fire_behavior(surface_fire_normal, crown_fire_normal)
+            surface_dphi_dt      = surface_fire_normal["dphi_dt"]
+            crown_dphi_dt        = crown_fire_normal["dphi_dt"]
+            combined_dphi_dt     = surface_dphi_dt if abs(surface_dphi_dt) > abs(crown_dphi_dt) else crown_dphi_dt
+            combined_fire_normal["dphi_dt"] = combined_dphi_dt
+
+            #========================================================================================
+            # Return the combined fire behavior normal to the fire perimeter
+            #========================================================================================
+
+            return combined_fire_normal
+
+        else:
+
+            #========================================================================================
+            # Return the surface fire behavior normal to the fire perimeter
+            #========================================================================================
+
+            return surface_fire_normal
+#+end_src
+
+#+name: spread-phi-field
+#+begin_src python
 # Sketch of Fire Spread Progression Algorithm:
 # ==============================================================================================
-# 0. Start with space_time_cubes dictionary, phi 2D array, dx, dy, and start_time in minutes.
-# 1. Calculate dt.
+# 1. Start with space_time_cubes dictionary, phi 2D array, dx, dy, and start_time in minutes.
 # 2. Exit if start_time + dt > max_stop_time.
 # 3. Create phi_star and phi_star_star 2D arrays.
 # 4. Identify perimeter cells with a buffer from phi 2D array.
@@ -5614,29 +5854,57 @@ def calc_fireline_normal_behavior(fire_behavior_max, phi_gradient):
 #         3.2.1. Skip this cell since it is not on the perimeter. Return to 3.1. for the next perimeter cell.
 #         else:
 #         3.2.2  Look up slope and aspect from the space_time_cubes dictionary.
-#         3.2.3. phi_gradient_on_slope = calc_phi_gradient_on_slope(phi_gradient_xy, slope, aspect)
-#         3.2.4. surface_fire_max = calc_surface_fire_behavior_max(...) # May require another burn_cells function.
-#         3.2.5. surface_normal_behavior = calc_fireline_normal_behavior(surface_fire_max, phi_gradient_on_slope)
-#         3.2.6. surface_dphi_dt = surface_normal_behavior["dphi_dt"]
-#         3.2.7. if van_wagner_crown_fire_initiation(surface_normal_behavior["fireline_intensity"], ...):
-#                3.2.7.1. crown_fire_max = calc_crown_fire_behavior_max(...) # May require another burn_cells function.
-#                3.2.7.2. crown_normal_behavior = calc_fireline_normal_behavior(crown_fire_max, phi_gradient_on_slope)
-#                3.2.7.3. crown_dphi_dt = crown_normal_behavior["dphi_dt"]
-#                3.2.7.4. combined_dphi_dt = min(surface_dphi_dt, crown_dphi_dt)
-#                3.2.7.5. combined_normal_behavior = calc_combined_fire_behavior(surface_normal_behavior,
-#                                                                                crown_normal_behavior)
-#                3.2.7.6. return (combined_dphi_dt, combined_normal_behavior)
-#                else:
-#                3.2.7.7. return (surface_dphi_dt, surface_normal_behavior)
-#    3.3. Set phi_star[y][x] = phi[y][x] + dphi_dt
+#         3.2.3. elevation_gradient = calc_elevation_gradient(slope, aspect)
+#         3.2.4. phi_gradient_on_slope = calc_phi_gradient_on_slope(phi_gradient_xy, elevation_gradient)
+#         3.2.5. (dphi_dt, fire_behavior) = burn_cell_toward_phi_gradient(space_time_cubes, space_time_coordinate, phi_gradient, use_wind_limit, max_length_to_width_ratio)
+#    3.3. Calculate dt using the CFL condition.
+#    3.4. Set phi_star[y][x] = phi[y][x] + dphi_dt * dt
 # 6. Jump to step 4 and set the time to (start_time + dt). Also replace phi -> phi_star and phi_star -> phi_star_star.
 # 7. Set the phi 2D array to be the average of phi and phi_star_star.
-# 8. Jump to step 1 and repeat for the next timestep.
+# 8. Jump to step 2 and repeat for the next timestep.
+
+# TODO: Incorporate Val's ideas on integrating the flux-limited phi gradient with the non-limited phi gradient.
+#       See his evaluate_dphi_dt() function in the "Pyretechnics Library" channel.
+
 #+end_src
 
-# TODO: Implement U_x and U_y calculations using surface and crown
-# equations from the ELMFIRE paper and the online technical reference:
-  https://github.com/lautenberger/elmfire/blob/main/docs/tech_ref.rst
+@gjohnson I think the dt question is easy enough to answer: you want
+to compute it after you have calculated enough fire behavior metrics
+to apply the CFL condition. Here's the ELMFIRE code:
+
+#+begin_src fortran :eval no
+! *****************************************************************************
+SUBROUTINE CALC_CFL(DT)
+! *****************************************************************************
+
+REAL, INTENT(INOUT) :: DT
+INTEGER :: I
+REAL :: CFL, U, UX, UY, UMAX
+TYPE(NODE), POINTER :: C
+
+UMAX = 0.
+C => LIST_TAGGED%HEAD
+DO I = 1, LIST_TAGGED%NUM_NODES
+   IF (.NOT. C%BURNED) THEN
+      UX=ABS(C%UX)
+      UY=ABS(C%UY)
+      U=MAX(UX,UY)
+      IF (U .GT. UMAX) UMAX = U
+   ENDIF
+   C => C%NEXT
+ENDDO
+
+CFL = UMAX * DT / ANALYSIS_CELLSIZE
+IF (CFL .GT. 0.) THEN
+   DT = MIN(TARGET_CFL * DT / CFL, SIMULATION_DTMAX)
+ELSE
+   DT = SIMULATION_DTMAX
+ENDIF
+CONTINUE
+
+! *****************************************************************************
+END SUBROUTINE CALC_CFL
+#+end_src
 
 ** For Users
    :PROPERTIES:
